--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,26 +1,45 @@
 [
   {
     "title": "HADES",
+    "type": "Personal",
     "link": "https://github.com/Gloobinours/HADES",
     "description": "A honeypot and analysis platform for detecting and studying cyber threats.",
     "tech": ["Python", "Flask", "MongoDB", "Docker"]
   },
   {
     "title": "Stock Prediction AI",
+    "type": "Personal",
     "link": "https://github.com/jhailos/stock-prediction",
     "description": "An AI-powered tool for predicting stock prices using machine learning models.",
     "tech": ["Python", "TensorFlow", "Pandas", "scikit-learn"]
   },
   {
     "title": "Maze AI",
+    "type": "Personal",
     "link": "https://github.com/Gloobinours/maze-ai",
     "description": "A project where AI agents learn to solve mazes using reinforcement learning.",
     "tech": ["Python", "PyTorch", "OpenAI Gym"]
   },
   {
     "title": "Tetris Game",
+    "type": "Personal",
     "link": "https://gloobinours.github.io/Tetris/Front/",
     "description": "A classic Tetris game built with modern web technologies.",
     "tech": ["JavaScript", "HTML5", "CSS3"]
+  },
+  {
+    "title": "NUTRiAPP",
+    "type": "Academic",
+    "link": null,
+    "description": "Collaborated with a team of 5 to build a nutrition app in Java",
+    "tech": ["OOP", "Design Patterns", "Java"]
+  },
+  {
+    "title": "Theater Ticket Selling Website",
+    "type": "Academic",
+    "link": null,
+    "description": "Developed a theater ticket selling website using Java and Spring Boot.",
+    "tech": ["Java", "Spring Boot", "TypeScript", "Angular"]
   }
+
 ]
